--- a/about.html
+++ b/about.html
@@ -14,8 +14,8 @@
                 </div>
                 <nav>
                     <ul>
-                        <li class="current"><a href="index.html">Home</a>
-                        <li><a href="about.html">About</a>
+                        <li><a href="index.html">Home</a>
+                        <li class="current"><a href="about.html">About</a>
                         <li><a href="services.html">Services</a>
                     </ul>
                 </nav>
