--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         </header>
         
         <section id="showcase">
-            <div class="containter">
+            <div class="container">
                 <h1>Web Design At It's Mediocre-ist</h1>
                 <p>Once again my name is Lane Larochelle. I am from Ponteix SK which is located 80 km south of Swift Current. I come from a family of 3 brothers, mom's a school teacher, and my dad runs our family farm of both grain and cattle. I graduated with a bachelor of science engineering in the computer engineering discipline from the University of Saskatchewan in April of 2018.</p>
             </div>
