--- a/about.html
+++ b/about.html
@@ -34,8 +34,8 @@
                 <h1>Request a Resume or Quote</h1>
                 <form action="form_handler.php">
                     <!Code for form processing goes here>
-                    <input type="email" placeholder="Enter Email..." name="email">
-                    <button type="submit" class="button_1">Request</button>
+                    <input type="email" placeholder="Enter Email..." method="post" name="email">
+                    <button type="submit" class="button_1" value="SEND MESSAGE">Request</button>
                 </form>
             </div>
         </section>
