--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
         <meta name="viewport" content="width=device-width">
         <title>Lane Larochelle | Welcome</title>
         <link rel="stylesheet" type="text/css" href="style.css"/>
+        <link rel="shortcut icon" href="825727_SjZ_icon.ico" />
     </head>
     
     <body>
        <div class="navigation">
             <ul id="menu1">
                 <li><a href="about.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="about.php">About</a></li>
                 <li><a href="sevices.hmtl">Services</a></li>
             </ul>
             
