--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        <div class="navigation">
             <ul id="menu1">
                 <li><a href="about.html">Home</a></li>
-                <li><a href="about.php">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="sevices.hmtl">Services</a></li>
             </ul>
             
