--- a/about.html
+++ b/about.html
@@ -54,9 +54,9 @@
                     <p>A style sheet language used for describing the presentation of a document written in a markup language.</p>
                 </div>              
                 <div class="box">
-                    <img src="php.png">
-                    <h3>PHP Scripting</h3>
-                    <p>A server-side scripting language designed for web development but also used as a general-purpose programming language.</p>
+                    <img src="js.png">
+                    <h3>JavaScript Interactions</h3>
+                    <p> A high-level, interpreted programming language.</p>
                 </div>
             </div>
         </section>
