--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
        <div class="navigation">
             <ul id="menu1">
-                <li><a href="about.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="sevices.hmtl">Services</a></li>
             </ul>
