--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
         <div class="main">
             <h2>Home</h2>
-            <p>My Name is Lane Larochelle. I am a Computer Engineering graduate from the University of Saskatchewan. I have a keen Interest in software development of all kinds. I try to get some experience any where I can whether it's side projects, assignments or helping friends trouble shoot. </p>
+            <p>My Name is Lane Larochelle. I am a Computer Engineering graduate from the University of Saskatchewan. I have a keen Interest in software development of all kinds. I try to get some experience any where I can, whether it's side projects, assignments or helping friends trouble shoot. </p>
             <p>I have lots of experience with Java, Python, C, Matlab, and Verilog. I've been trying to expand my horizons with some MYSQL, HTML, CSS, PHP and JavaScript. By no means am I master of web development, but I'm out here and I'm trying so give me that. Not even my first website so imagine how bad the first one was!</p>
         </div>
         
