--- a/html/about.html
+++ b/html/about.html
@@ -15,7 +15,7 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="../index.php">Home</a>
+                        <li><a href="../index.html">Home</a>
                         <li class="current"><a href="/html/about.html">About</a>
                         <li><a href="/html/snake.html">Experiment</a>
                     </ul>
