--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <nav>
                     <ul>
                         <li class="current"><a href="index.php">Home</a>
-                        <li><a href="/html/about.php">About</a>
+                        <li><a href="/html/about.html">About</a>
                         <li><a href="/html/snake.html">Experiment</a>
                     </ul>
                 </nav>
