--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="box">
                     <img src="/images/calendar.png">
                     <h3>Class Scheduling Tool</h3>
-                    <p>Using Java and mySQL we were abe to create a smart registration tool for the Computer Engineering program. It would create a timetable as you added and dropped classes, showing conflicts and limiting future options based on your availability.</p>
+                    <p>Using Java and mySQL we were able to create a smart registration tool for the Computer Engineering program. It would create a timetable as you added and dropped classes, showing conflicts and limiting future options based on your availability.</p>
                 </div>              
                 <div class="box">
                     <img src="/images/chain.png">
