--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section id="showcase">
             <div class="containter">
                 <h1>Hello Bonjour Hola</h1>
-                <p>I'm Lane Larochelle. I am a Computer Engineering graduate from the University of Saskatchewan. This site is just a play gorund for developing my web programming.</p>
+                <p>I'm Lane Larochelle. I am a Computer Engineering graduate from the University of Saskatchewan. This site is just a play ground for developing my web programming.</p>
                 <p align="bottom">Below I've listed 3 of my major accomplishments in the world of coding.</p>
             </div>
         </section>
